--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nestjs-rest-api",
+  "name": "nestjs-redis",
   "version": "0.0.1",
-  "description": "",
+  "description": "An example API of how to use Redis in NestJS",
   "author": {
     "name": "William Queiroz",
     "email": "wnqueiroz@outlook.com"
@@ -26,9 +26,12 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/microservices": "^7.5.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.5",
     "@vitalets/google-translate-api": "^4.0.0",
+    "cache-manager": "^3.4.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
