--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/microservices": "^7.5.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.5",
+    "@nestjs/terminus": "^7.0.1",
     "@vitalets/google-translate-api": "^4.0.0",
     "cache-manager": "^3.4.0",
     "cache-manager-redis-store": "^2.0.0",
